@@ -11,6 +11,7 @@ import org.springframework.http.*;
 /* Import classes */
 import com.mealchemy.recipe.model.RecipeIngredient;
 import com.mealchemy.recipe.model.Recipe;
+import com.mealchemy.ingredient.model.IngredientCatalogue;
 import com.mealchemy.recipe.dto.RecipeIngredientRequest;
 import com.mealchemy.recipe.dto.RecipeIngredientResponse;
 import com.mealchemy.recipe.repository.RecipeIngredientRepository;
@@ -36,7 +37,15 @@ public class RecipeIngredientService
     // Retrieve all ingredients relating to a specific recipe
     public List<RecipeIngredientResponse> getAllIngredientsByRecipeId(Integer recipeId)
     {
-        return recipeIngredientRepository.findByRecipe_RecipeId(recipeId).stream().map(RecipeIngredientResponse::from).collect(Collectors.toList());
+        List<RecipeIngredient> recipeIngredients = recipeIngredientRepository.findByRecipe_RecipeId(recipeId);
+
+        List<Integer> ingIds = recipeIngredients.stream().map(RecipeIngredient::getIngId).distinct().toList();
+
+        Map<Integer, String> ingredientNamesById = ingredientCatalogueRepository.findAllById(ingIds).stream()
+        .collect(Collectors.toMap(IngredientCatalogue::getIngId, IngredientCatalogue::getName));
+
+        return recipeIngredients.stream().map(ri -> RecipeIngredientResponse.from(ri, ingredientNamesById.getOrDefault(ri.getIngId(), "Unknown Ingredient")))
+        .collect(Collectors.toList());
     }
 
     // Create a new ingredient for a specific recipe
@@ -49,14 +58,14 @@ public class RecipeIngredientService
             throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Only the owner of this recipe can modify its ingredients.");
         }
 
-        if (!ingredientCatalogueRepository.existsById(request.ingId()))
-        {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "The ingredient you want to add does not exist.");
-        }
+        IngredientCatalogue ingredientCatalogue = ingredientCatalogueRepository.findById(request.ingId())
+        .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "The ingredient you want to add does not exist."));
 
         RecipeIngredient recipeIngredientForReturn = mapRequestToEntity(request, recipeToCheck);
+
+        RecipeIngredient saved = recipeIngredientRepository.save(recipeIngredientForReturn);
         
-        return RecipeIngredientResponse.from(recipeIngredientRepository.save(recipeIngredientForReturn));
+        return RecipeIngredientResponse.from(saved, ingredientCatalogue.getName());
     }
 
     // Update a specific ingredient in an existing recipe
@@ -69,24 +78,24 @@ public class RecipeIngredientService
             throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Only the owner of this recipe can modify its ingredients.");
         }
 
-        RecipeIngredient recipeIngredientForReturn = recipeIngredientRepository.findById(id).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Ingredient not found."));
+        RecipeIngredient recipeIngredientForReturn = recipeIngredientRepository.findById(id)
+        .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Ingredient not found."));
         
         if (!recipeIngredientForReturn.getRecipe().getRecipeId().equals(recipeId))
         {
             throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Ingredient must be part of the recipe.");
         }
 
-        if (!ingredientCatalogueRepository.existsById(request.ingId()))
-        {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "The ingredient you want to change to does not exist.");
-        }
+        IngredientCatalogue ingredientCatalogue = ingredientCatalogueRepository.findById(request.ingId())
+        .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "The ingredient you want to change to does not exist."));
 
         recipeIngredientForReturn.setIngId(request.ingId());
         recipeIngredientForReturn.setQuantity(request.quantity());
         recipeIngredientForReturn.setUnit(request.unit());
         recipeIngredientForReturn.setSortOrder(request.sortOrder());
 
-        return RecipeIngredientResponse.from(recipeIngredientRepository.save(recipeIngredientForReturn));
+        RecipeIngredient saved = recipeIngredientRepository.save(recipeIngredientForReturn);
+        return RecipeIngredientResponse.from(saved, ingredientCatalogue.getName());
     }
 
     // Delete a specific ingredient in an existing recipe
